[gd_scene load_steps=11 format=2]

[ext_resource path="res://kenney_pixelplatformer/Characters/character_0025.png" type="Texture" id=1]
[ext_resource path="res://kenney_pixelplatformer/Characters/character_0024.png" type="Texture" id=2]
[ext_resource path="res://kenney_pixelplatformer/Characters/character_0026.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Bat.gd" type="Script" id=4]
[ext_resource path="res://Photos/explosion_Boom_2.png" type="Texture" id=5]
[ext_resource path="res://Photos/explosion_Boom_1.png" type="Texture" id=6]
[ext_resource path="res://Photos/explosion_Boom_3.png" type="Texture" id=7]
[ext_resource path="res://Photos/explosion_dull.mp3" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Explode",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.97292, 5 )

[node name="Bat" type="KinematicBody2D"]
position = Vector2( 61, 19 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, 6 )
frames = SubResource( 1 )
animation = "Fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.02708, 8 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="FireBallHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
